monticore-generator/src/test/resources/cocos/invalid/A0278/A0278.mc4
package cocos.invalid.A0278;

grammar A0278 {

  interface A;

}
